Minicart > skin ? fix overflow

--- a/src/css/_minicart.scss
+++ b/src/css/_minicart.scss
@@ -7,6 +7,7 @@
 
     .minicart-open & {
         transform: translateX(0);
+        overflow: auto;
     }
 
     h2 {
